# ZeroMQProxy

./: .gitignore  README.md
cloud/: .env.example  CMakeLists.txt  Dockerfile  README.md  cloud2.js  main.cpp  package-lock.json  package.json  sccloud.js
edge/: .env.example  requirements.txt  scedge.py  sensor.py  sprinkler.py
edge/config/: globalConfig.json
fog/: .env.example  config.js  fog.js  healt_check.js  health.js  package-lock.json  package.json  proxy.js  scfog.py  testCloud.js
